--- a/test/game/index.html
+++ b/test/game/index.html
@@ -120,6 +120,10 @@
         overflow: hidden;
         -webkit-transition: 200ms;
       }
+      section a {
+        height: 50px !important;
+        line-height: 50px !important;
+      }
       section div.opened > a {
         background: hsl(0, 0%, 90%);
       }
