--- a/test/common/index.html
+++ b/test/common/index.html
@@ -33,4 +33,5 @@
 
 <script src='src/core/object.js'></script>
 <script src='src/util/index.js'></script>
+<script src='src/geom/index.js'></script>
 <script src='src/app/index.js'></script>
