--- a/test/game/index.html
+++ b/test/game/index.html
@@ -2,9 +2,10 @@
 
 <html>
   <head>
-    <meta charset='utf-8' />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>test - phina.js</title>
     <meta name="description" content="${description}" />
