--- a/test/game/index.html
+++ b/test/game/index.html
@@ -62,7 +62,10 @@
       }
       #preview, #preview iframe {
         width: 100%;
-        height: calc(100vh - 70px);
+        height: 100vh;
+        margin-top: -66px;
+        padding-top: 66px;
+
         border: none;
       }
     script.
