--- a/test/game/index.html
+++ b/test/game/index.html
@@ -175,6 +175,7 @@
       };
       this.open = function(e) {
         riot.route(e.item.path);
+        $(".button-collapse").sideNav('hide');
       };
 </script>
 
