add touches test

--- a/test/game/index.html
+++ b/test/game/index.html
@@ -36,7 +36,10 @@
     <!-- test files -->
     <script src='src/display/index.js'></script>
     <script src='src/ui/index.js'></script>
+    <script src='src/input/index.js'></script>
+    <!--
     <script src='graphics/canvas.js'></script>
+  -->
   </head>
   <body>
     <app></app>
