fix tweener test

--- a/test/game/index.html
+++ b/test/game/index.html
@@ -34,6 +34,7 @@
     <script src='testhelper.js'></script>
 
     <!-- test files -->
+    <script src='src/app/index.js'></script>
     <script src='src/display/index.js'></script>
     <script src='src/ui/index.js'></script>
     <script src='src/input/index.js'></script>
