--- a/test/benchmark/index.html
+++ b/test/benchmark/index.html
@@ -37,18 +37,16 @@ phina.define("MainScene", {
       height: SCREEN_HEIGHT,
     });
 
-    var image = new Image();
-    image.src = IMAGE;
+    var texture = Texture(IMAGE);
+    AssetManager.set('image', 'image', texture);
 
-    image.onload = function() {
+    texture.onload = function() {
       this.update = this._update;
 
       MAX_NUM.times(function() {
         this.create();
       }.bind(this));
     }.bind(this);
-
-    this.image = image;
   },
 
   _update: function() {
@@ -67,7 +65,7 @@ phina.define("MainScene", {
 
     var self = this;
     CHILD_NUM.times(function(i) {
-      var child = Sprite(self.image).addChildTo(group);
+      var child = Sprite('image').addChildTo(group);
       var deg = i/CHILD_NUM * 360;
       child.x = CHILD_RADIUS * Math.cos(deg * Math.PI/180);
       child.y = CHILD_RADIUS * Math.sin(deg * Math.PI/180);
