--- a/examples/touchgame.html
+++ b/examples/touchgame.html
@@ -123,7 +123,15 @@ window.onload = function() {
     height: SCREEN_HEIGHT,
   });
 
-  app.replaceScene(MainScene());
+  var scene = ManagerScene({
+    scenes: [
+      {
+        className: 'MainScene',
+      },
+    ]
+  });
+
+  app.replaceScene(scene);
 
   app.run();
 };
