move tweeter from `app` to `accessory`

--- a/test/game/index.html
+++ b/test/game/index.html
@@ -38,6 +38,7 @@
     <script src='src/display/index.js'></script>
     <script src='src/ui/index.js'></script>
     <script src='src/input/index.js'></script>
+    <script src='src/accessory/index.js'></script>
     <!--
     <script src='graphics/canvas.js'></script>
   -->
