--- a/test/game/index.html
+++ b/test/game/index.html
@@ -39,6 +39,7 @@
     <script src='src/ui/index.js'></script>
     <script src='src/input/index.js'></script>
     <script src='src/accessory/index.js'></script>
+    <script src='src/game.js'></script>
     <!--
     <script src='graphics/canvas.js'></script>
   -->
