--- a/test/game/index.html
+++ b/test/game/index.html
@@ -40,6 +40,7 @@
     <script src='src/input/index.js'></script>
     <script src='src/accessory/index.js'></script>
     <script src='src/game.js'></script>
+    <script src='src/box2d.js'></script>
     <!--
     <script src='graphics/canvas.js'></script>
   -->
