--- a/test/game/index.html
+++ b/test/game/index.html
@@ -37,7 +37,7 @@
     <script src='src/app/index.js'></script>
     <script src='src/display/index.js'></script>
     <script src='src/ui/index.js'></script>
-    <script src='src/input/index.js'></script>
+    <script src='src/input.js'></script>
     <script src='src/accessory/index.js'></script>
     <script src='src/game.js'></script>
     <script src='src/box2d.js'></script>
