--- a/test/game/index.html
+++ b/test/game/index.html
@@ -34,11 +34,11 @@
     <script src='testhelper.js'></script>
 
     <!-- test files -->
-    <script src='src/app/index.js'></script>
-    <script src='src/display/index.js'></script>
-    <script src='src/ui/index.js'></script>
+    <script src='src/app.js'></script>
+    <script src='src/display.js'></script>
+    <script src='src/ui.js'></script>
     <script src='src/input.js'></script>
-    <script src='src/accessory/index.js'></script>
+    <script src='src/accessory.js'></script>
     <script src='src/game.js'></script>
     <script src='src/box2d.js'></script>
     <script src='src/asset.js'></script>
