--- a/examples/typing.html
+++ b/examples/typing.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset='utf-8' />
   </head>
   <body>
   </body>
@@ -37,10 +38,18 @@ phina.define("MainScene", {
         wordGroup: {
           className: 'CanvasElement',
         },
+        scoreLabel: {
+          className: 'Label',
+          text: '999',
+          x: this.gridX.span(15),
+          y: this.gridX.span(1),
+          align: 'right',
+        }
       },
     });
 
     this.score = 0;
+    this.scoreLabel.text = this.score + '';
   },
 
   onkeydown: function(e) {
@@ -57,6 +66,7 @@ phina.define("MainScene", {
 
     if (result) {
       this.score += 1;
+      this.scoreLabel.text = this.score + '';
     }
   },
 
