--- a/test/common/index.html
+++ b/test/common/index.html
@@ -33,6 +33,7 @@
 
 <script src='src/core/object.js'></script>
 <script src='src/core/number.js'></script>
+<script src='src/core/array.js'></script>
 <script src='src/util/index.js'></script>
 <script src='src/geom/index.js'></script>
 <script src='src/app/index.js'></script>
