--- a/examples/breakout.html
+++ b/examples/breakout.html
@@ -22,7 +22,7 @@ phina.globalize();
 
 var SCREEN_WIDTH    = 640;
 var SCREEN_HEIGHT   = 960;
-var MAX_PER_LINE    = 8;                            // ブロックの横に並ぶ最大数
+var MAX_PER_LINE    = 8;                            
 var BLOCK_NUM       = MAX_PER_LINE*5;
 var BLOCK_SIZE      = 64;
 var BOARD_PADDING   = 50;
