--- a/examples/03_pursuit.html
+++ b/examples/03_pursuit.html
@@ -85,6 +85,13 @@ phina.define("MainScene", {
       return current;
     }, null);
   },
+
+  onkeydown: function(e) {
+    // space if push space
+    if (e.keyCode === 32) {
+      this.app.stop();
+    }
+  },
 });
 
 /*
