fix phinappy bird

--- a/examples/phinappy-bird.html
+++ b/examples/phinappy-bird.html
@@ -99,6 +99,7 @@ phina.define('MainScene', {
     this.tubeGroup.children.each(function(child) {
       if (this.player.hitTestElement(child)) {
         console.log('hit');
+        this.exit();
       }
     }, this);
   },
